bugfix: - horizontal scroll for long journal - double click only for single value

--- a/ecos-base-core-share/source/web/citeck/components/invariants/invariants.css
+++ b/ecos-base-core-share/source/web/citeck/components/invariants/invariants.css
@@ -1251,6 +1251,11 @@
 }
 
 .journal-container .journal {
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+.journal-container .journal table {
   width: 100%;
   border-collapse: collapse;
 }
